--- a/public/juegos/cyberpunk/1v1/style.css
+++ b/public/juegos/cyberpunk/1v1/style.css
@@ -17,12 +17,32 @@ body {
   text-align: center;
 }
 
+#pantalla-inicial,
+#pantalla-juego {
+  transition: opacity 0.4s ease-in-out;
+}
+
+
 h1 {
   font-size: 2rem;
   color: var(--color-secondary);
   text-shadow: 0 0 8px var(--color-secondary);
   margin-bottom: 30px;
 }
+
+.btn-rojo {
+  background-color: #b30000;
+  color: white;
+  padding: 8px 12px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  margin-top: 10px;
+}
+.btn-rojo:hover {
+  background-color: #e60000;
+}
+
 
 input[type="text"] {
   background-color: transparent;
@@ -85,4 +105,19 @@ button:hover:not(:disabled) {
 
 #btn-finalizar-turno {
   margin-top: 20px;
+}
+
+.boton-volver {
+  margin-top: 20px;
+  padding: 10px 20px;
+  background-color: #900;
+  color: white;
+  border: none;
+  border-radius: 6px;
+  cursor: pointer;
+  font-weight: bold;
+}
+
+.boton-volver:hover {
+  background-color: #c00;
 }
